--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build-gnunet-python:
   only:
     - master
   before_script:
-    - apt install python3-pip
+    - apt-get install -y python3-pip
     - pip3 install dbus
     - pip3 install PyGObject
   script: python setup.py
