--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,5 +24,5 @@ build-gnunet-python:
   only:
     - master
   before_script:
-    - apt-get install -y python3-pip python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 dbus-python
+    - apt-get install -y python3-pip python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 python-dbus
   script: python setup.py
