--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ build-gnunet-python:
   image: gnunet-python:latest
   only:
     - master
-  before_script:
-    - apt-get install -y python3-pip python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 python-dbus
-  script: python3 setup.py
+  install:
+    - apt-get install -y python3-pip python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 python-dbus python3-flake8
+    - pip3 install --no-deps .
+  script:
+    - flake8 .
